added close function when clicking checkout button in cart, finalised payment page and links going to payment page, made all input field font-size the same, removed the sort filter in the shop

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,11 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-
+input {
+  font-size: 14px !important;
+}
+textarea {
+  font-size: 14px !important;
+}
 
 /* ----------------------------------------------------- */
