--- a/client/src/Pages/Payment/Payment-Step-three/PaymentStepThree.css
+++ b/client/src/Pages/Payment/Payment-Step-three/PaymentStepThree.css
@@ -1,28 +1,63 @@
-.paystack-button {
-    cursor: pointer;
-    text-align: center;
-    font-size: 10px;
-    letter-spacing: 0.1rem;
-    text-transform: uppercase;
-    background-color: rgb(1, 138, 45);
-    font-weight: bold;
-    color: #e0eafc;
-    border: none;
-    width: 100%;
-    height: 45px;
-    margin-top: 40px;
-  }
-  
-  .paystack-button:hover {
-    background-color: rgb(0, 109, 34);
-  }
-  
-  .paystack-button:focus {
-    outline: none;
-  }
+.final__payment__page {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin-bottom: 50px;
+}
+.final__payment__page__wrapper {
+  position: absolute;
+  top: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.final__payment__page__total__title {
+  font-size: 20px;
+}
+.final__payment__page__total {
+  width: 150px;
+  display: flex;
 
-  
-  @media (max-width: 768px) {
-    .paystack-button {
-      max-width: 320px;
-    }}
+  justify-content: space-between;
+}
+.final__payment__page__total > p {
+  font-size: 20px;
+  margin: 0 !important;
+}
+.final__payment__page__total__value {
+  color: red;
+}
+
+.paystack-button {
+  cursor: pointer;
+  text-align: center;
+  font-size: 10px;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  background-color: rgb(1, 138, 45);
+  font-weight: bold;
+  color: #e0eafc;
+  border: none;
+  width: 100%;
+  height: 45px;
+  margin-top: 40px;
+  border-radius: 3px;
+}
+
+.paystack-button:hover {
+  background-color: rgb(0, 109, 34);
+}
+
+.paystack-button:focus {
+  outline: none;
+}
+
+@media (max-width: 768px) {
+  .paystack-button {
+    max-width: 320px;
+  }
+}
