--- a/client/src/Pages/My-Account/MyAccount.css
+++ b/client/src/Pages/My-Account/MyAccount.css
@@ -55,8 +55,25 @@
 .order__display {
   margin-top: 00px;
 }
-.item__table{
+.order__display > p {
+  margin-top: 20px;
+}
+.item__table {
   background-color: #f5f5f5;
+}
+.order__total__wrapper {
+  /* background-color: blue; */
+  margin-top: 30px;
+  padding: 0 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.order__total__wrapper > p {
+  margin: 0;
+}
+.order__total__wrapper__amount {
+  font-weight: bold;
 }
 
 .track__your__order__wrapper {
@@ -81,8 +98,6 @@
 .track__your__order__wrapper__button:hover {
   background-color: #1b1b1b;
 }
-
-
 
 @media (max-width: 1024px) {
   .myAccount__page__wrapper {
@@ -115,7 +130,6 @@
     display: flex;
     flex-direction: column;
   }
- 
 }
 @media (max-width: 650px) {
   .myAccount__page__wrapper__top {
@@ -135,12 +149,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-   
   }
   .track__your__order__wrapper__button {
     margin-top: 20px;
     width: 250px;
-
-    
   }
 }
